Backend de NODE PARTE2 ERRORES
